finish base workflow (request deployment, approve or reject request)
